--- a/GISDesign_ZY/MapControl.resx
+++ b/GISDesign_ZY/MapControl.resx
@@ -129,4 +129,7 @@
   <metadata name="cMSStaticNote.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>689, 18</value>
   </metadata>
+  <metadata name="cMSLabel.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>828, 18</value>
+  </metadata>
 </root>
